--- a/site/index.html
+++ b/site/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Main index</title>
+    <title>Main pages</title>
     <link href="index.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <script src="index.js"></script>
+	First pages
   </body>
 </html>
